# s3mp

./: CMakeLists.txt  LICENSE  README.md  test.s3m
src/: audio.c  main.c  s3m.c  s3m.h
src/slopt/: CMakeLists.txt  opt.c  opt.h
